<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/settings_fragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/cart_fragment"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:orderInCategory="200"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favs"
        android:icon="@drawable/ic_baseline_star_outline_24"
        android:orderInCategory="300"
        android:title="@string/add_to_favs"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

</menu>