<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.example.respolhpl.cart.CartProduct" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/product_card"
        style="@style/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/thumbnail"
                loadThumbnail="@{product.thumbnailSrc}"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/image_desc"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/natura" />


            <TextView
                android:id="@+id/prod_name"
                style="@style/DefaultHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{product.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/thumbnail"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Antybakteryjna Deska do Krojenia Natura " />

            <TextView
                android:id="@+id/price"
                style="@style/DefaultBodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{@string/price(product.price)}"
                app:layout_constraintLeft_toRightOf="@id/thumbnail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prod_name"
                tools:text="Cena: 42.99" />

            <TextView
                android:id="@+id/quantity"
                style="@style/DefaultBodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                app:layout_constraintLeft_toRightOf="@id/thumbnail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <TextView
                style="@style/DefaultBodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                app:layout_constraintLeft_toRightOf="@id/thumbnail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quantity" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>